[package]
name = "rust-repl"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
libc = "0.2.175"
psm = "0.1.26"
rustc_codegen_cranelift = { git = "https://github.com/rust-lang/rustc_codegen_cranelift.git", rev = "9de73c86f373edec2381d17da180d9d533190519", features = [ "jit" ] }
rustyline = "17.0.1"
#rustc = { git = "https://github.com/rust-lang/rust.git", revision = "96cfc75584359ae7ad11cc45968059f29e7b44b7" }

[build-dependencies]
patch-crate = "0.1.13"

[package.metadata.patch]
crates = ["rustc_codegen_cranelift"]

[patch."https://github.com/rust-lang/rustc_codegen_cranelift.git"]
rustc_codegen_cranelift = { path="./target/patch/9de73c8" }
